--- a/desinphekciya/virus.html
+++ b/desinphekciya/virus.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../css/style_first_block_with_photo_and_send_form.css">
     <link rel="stylesheet" href="../css/style_enter_to_organization.css">
     <link rel="stylesheet" href="../css/style_content_on_main_page.css ">
-    <link rel="stylesheet" href="../css/style_text_on_page_plesen.css">
+    <link rel="stylesheet" href="../css/style_text_on_page_virus.css">
     <link rel="stylesheet" href="../css/style_send_form.css">
     <link rel="stylesheet" href="../css/style_garantiya.css">
     <link rel="stylesheet" href="../css/style_pest-control.css">
@@ -90,7 +90,7 @@
 
     <!-- Блок с фото и формой после хедера -->
     <!-- НАЧАЛО -->
-    <div class="container-fluid first_block__photo" style="background-image: url(../img/плесень\ 1.jpg);">
+    <div class="container-fluid first_block__photo" style="background-image: url(../img/вирус.jpg);">
         <div class="container">
             <div class="row first_block__container">
                 <div class="offset-lg-1 col-lg-6 col-md-7 first_block__text_container">
@@ -150,9 +150,9 @@
 
     <!-- Ввод -->
     <!-- НАЧАЛО -->
-    <div class="container plesen__container mt-4 mb-5">
-        <div class="plesen__content">
-            <p class="plesen__text">Крысы могут доставить много неприятностей, перегрызая провода, приводя в негодность мебель и другое имущество. Что и говорить о съестных запасах, которые начинают уничтожаться с огромной скоростью. Но все это не идет ни в какое сравнение с заболеваниями, которые переносят эти грызуны — именно они являются основной причиной начать уничтожение крыс в доме.</p>
+    <div class="container virus__container mt-4 mb-5">
+        <div class="virus__content">
+            <p class="virus__text"></p>
         </div>
     </div>
     <!-- КОНЕЦ -->
@@ -182,14 +182,14 @@
 
     <!-- Уничтожение клопов на дачном участке -->
     <!-- НАЧАЛО -->
-    <div class="container kill_plesen_on_dacha__container mt-4">
-        <div class="row kill_plesen_on_dacha__content">
-            <div class="offset-lg-1 col-lg-10 offset-md-1 col-md-10 kill_plesen_on_dacha__block_main_text text-center">
-                <p class="kill_plesen_on_dacha__main_text"><span style="color:red; font-weight: 800;">Уничтожение </span>плесени</p>
+    <div class="container kill_virus_on_dacha__container mt-4">
+        <div class="row kill_virus_on_dacha__content">
+            <div class="offset-lg-1 col-lg-10 offset-md-1 col-md-10 kill_virus_on_dacha__block_main_text text-center">
+                <p class="kill_virus_on_dacha__main_text"><span style="color:red; font-weight: 800;">Уничтожение </span>вирусов</p>
             </div>
-            <div class="offset-lg-3 col-lg-6 text-center kill_plesen_on_dacha__block_text mb-3">
+            <div class="offset-lg-3 col-lg-6 text-center kill_virus_on_dacha__block_text mb-3">
                 <div class="hr"></div>
-                <p class="kill_plesen_on_dacha__text">Профессиональное уничтожение плесени в квартирах</p>
+                <p class="kill_virus_on_dacha__text">Профессиональное уничтожение вирусовх</p>
             </div>
         </div>
     </div>>
@@ -197,36 +197,11 @@
 
     <!-- Главный текст на странице -->
     <!-- НАЧАЛО -->
-    <div class="container main_text_on_page_plesen__container">
-        <div class="main_text_on_page_plesen__content">
-            <p class="text_on_page_plesen__text">В старых домах часто нарушена циркуляция воздуха из-за физического и морального устаревания несущих конструкций. На кухнях, ванной и в санузле «хрущевок», коммунальных квартир и других построек старого фонда часто образуется серая и черная плесень. Поначалу хозяева квартир пытаются отмыть ее, затем — скрыть косметическим ремонтом, но все это приносит временный эффект, но затем опасный налет появляется вновь.</p>
-            <div class="hr"></div>
-            <p class="text_on_page_plesen__main_text">Почему стоит заказать услуги специалистов? </p>
-            <div class="hr"></div>
-            <p class="text_on_page_plesen__text">Уничтожение плесени в квартире с первого раза может быть гарантировано только профессионалами. Плесень проникает глубоко в стены, поэтому необходимо применять специализированные препараты и не просто зачищать пораженные участки, а проводить тщательную антисептическую обработку. </p>
-            <p class="text_on_page_plesen__text">Перед началом работ мы обследуем помещения, подбираем средство для борьбы с плесенью в квартире, рассчитываем дозировку и расскажем как подготовиться к процедуре. Сразу отметим, что инсектициды, применяемые в борьбе с серой и черной плесенью на стенах и потолках в квартире, абсолютно безопасны для людей и домашних животных. Но перед визитом дезинфектора необходимо из кухни убрать все продукты, а из ванной и санузла – средства личной гигиены.</p>
-            <div class="hr"></div>
-            <p class="text_on_page_plesen__main_text">5 причин обратиться к нам</p>
-            <div class="hr"></div>
-            <ul class="text_on_page_plesen__ul">
-                <li class="text_on_page_plesen__li">
-                    <p class="text_on_page_plesen__li_text">Беремся за любые помещения и любую степень поражения.</p>
-                </li>
-                <li class="text_on_page_plesen__li">
-                    <p class="text_on_page_plesen__li_text">Работаем 24 часа в сутки, без праздников и выходных. </p>
-                </li>
-                <li class="text_on_page_plesen__li">
-                    <p class="text_on_page_plesen__li_text">Можем выехать на заказ даже ночью.</p>
-                </li>
-                <li class="text_on_page_plesen__li">
-                    <p class="text_on_page_plesen__li_text">Даем гарантию на все работы. </p>
-                </li>
-                <li class="text_on_page_plesen__li">
-                    <p class="text_on_page_plesen__li_text">После обработки дезинфектор дает рекомендации, чтобы плесень не появилась вновь.</p>
-                </li>
-            </ul>
-            <p class="text_on_page_plesen__text">Позвоните по телефону ☎ <a href="tel:+380503559950" class="enter__link"> +38(050)-355-99-50 </a> или заполните форму обратной связи, чтобы специалисты компании смогли сориентировать вас по цене и сразу записать на удобные дату и время.</p>
-            <p class="text_on_page_plesen__text">Мы работаем 24 часа в сутки без выходных, поэтому всегда сможем найти наиболее удобный для вас момент!</p>
+    <div class="container main_text_on_page_virus__container">
+        <div class="main_text_on_page_virus__content">
+            <p class="text_on_page_virus__text">В начале 2020 года человечество в значительной степени повысило свой санитарный опыт. Дезинфекция от коронавируса превратилась в задачу первостепенной важности. Профессиональное её выполнение спасло тысячи жизней. Сегодня никто не станет недооценивать дезинфекцию. Чистота и стерильность встали на страже здоровья людей.</p>
+            <p class="text_on_page_virus__text">Позвоните по телефону ☎ <a href="tel:+380503559950" class="enter__link"> +38(050)-355-99-50 </a> или заполните форму обратной связи, чтобы специалисты компании смогли сориентировать вас по цене и сразу записать на удобные дату и время.</p>
+            <p class="text_on_page_virus__text">Мы работаем 24 часа в сутки без выходных, поэтому всегда сможем найти наиболее удобный для вас момент!</p>
         </div>
     </div>
     <!-- КОНЕЦ -->
