--- a/desinphekciya/virus.html
+++ b/desinphekciya/virus.html
@@ -95,16 +95,16 @@
             <div class="row first_block__container">
                 <div class="offset-lg-1 col-lg-6 col-md-7 first_block__text_container">
                     <div class="first_block__text_content">
-                        <h1 class="first_block__main_text">Борьба с плесенью в квартирах</h1>
+                        <h1 class="first_block__main_text">Обработка от вирусов</h1>
                         <ol class="first_block__list_with_text">
                             <li>
-                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Только профессиональные методы борьбы с плесенью</span>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Уничтожение всех видов вирусов, включая COVID-19</span>
                             </li>
                             <li>
-                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Абсолютно безопасно для людей, животных и растений</span>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Индивидуальный план обработки для каждого объекта</span>
                             </li>
                             <li>
-                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Даем гарантию на проделанную работу</span>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Работаем круглосуточно, без выходных</span>
                             </li>
                             <li>
                                 <span class="first_block__icon">&#10003;</span><span class="first_block__text">Работаем круглосуточно: 7 дней в неделю.</span>
