--- a/desinphekciya/virus.html
+++ b/desinphekciya/virus.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="SHORTCUT ICON" href="../img/dezodoracija.png" type="image/x-icon">
 
-    <title>Плесень</title>
+    <title>Вирусы</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" id="ao_optimized_gfonts" href="https://fonts.googleapis.com/css?family=Roboto:500&amp;display=swap">
@@ -105,9 +105,6 @@
                             </li>
                             <li>
                                 <span class="first_block__icon">&#10003;</span><span class="first_block__text">Работаем круглосуточно, без выходных</span>
-                            </li>
-                            <li>
-                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Работаем круглосуточно: 7 дней в неделю.</span>
                             </li>
                         </ol>
                         <p class="text-center first_block__link"><a href="tel:+380503559950">+38(050)-355-99-50</a> | <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJNqtbnWrnmlTlNjMjcNkRXdjLBxZbMxbxWjdQsMXrLNKQHhLWLnxCcrbJSSCkCKPkHhCXB">dezsan.kh@gmail.com</a></p></div>
